@@ -1,3 +1,8 @@
+2003-01-30  Paul D. Smith  <psmith@gnu.org>
+
+	* scripts/functions/word: Test error handling for word and
+	wordlist functions (bug #2407).
+
 2003-01-22  Paul D. Smith  <psmith@gnu.org>
 
 	* scripts/functions/call: Test recursive argument masking (bug
