@@ -1,3 +1,13 @@
+2003-01-30  Paul D. Smith  <psmith@gnu.org>
+
+	* function.c (check_numeric): Combine the is_numeric() function
+	into this function, since it's only called from one place.
+	Constify this function.  Have it print the incorrect string in the
+	error message.  Fixes bug #2407.
+	(strip_whitespace): Constify.
+	(func_if): Constify.
+	* expand.c (expand_argument): Constify.
+
 2003-01-29  Paul D. Smith  <psmith@gnu.org>
 
 	Fix bug # 2169, also reported by other people on various systems.
